--- a/about.html
+++ b/about.html
@@ -32,21 +32,69 @@
 
     <hr>
 
+    <section id="about">
+      <h1>About</h1>
+      <p>Welcome to David Soanes Photography.</p>
+      <p>
+        I am based in Dublin, where currently I work on commission and shoot
+        stock photography for Getty Images and other stock photography agencies.
+      </p>
+      <p>I specialise in the following areas:</p>
+      <ul>
+        <li>Travel photography</li>
+      </ul>
+      <ul>
+        <li>Events</li>
+      </ul>
+      <ul>
+        <li>Product Photography</li>
+      </ul>
+      <ul>
+        <li>Food Photography</li>
+      </ul>
+      <p>
+        I am also available for specific client requests, just contact me by
+        email
+        <a
+          href="https://web.archive.org/web/20170214165228/mailto: david.soanes@gmail.com"
+          ><b>here</b></a
+        >
+        for more information.
+      </p>
+      <p>
+        Previous Clients include: Open House Dublin, St. Patrick&#8217;s
+        Festival, Fáilte Ireland, Dublin Dance Festival, Arthritis Ireland,
+        Camara Education, An Taisce &#8211; The National Trust for Ireland,
+        Brambles Café, Empire Donuts, Dubliner Magazine, The Gathering Ireland.
+      </p>
+      <p>
+        <a
+          href="https://www.gettyimages.co.uk/photos/david-soanes?family=creative&license=rf&phrase=david%20soanes&sort=best"
+          ><img
+            class=""
+            src="images/getty-logo.png"
+            alt="Getty_images_logo"
+            width="130"
+            height="auto"
+        /></a>
 
-    <section>
-      <div class="container">
-        <div class="banner">
-          <img src="./images/homepage-banner.jpg" alt="" />
-        </div>
-      </div>
+        <a
+        href="https://www.shutterstock.com/g/somethingirish"
+        ><img
+          class=""
+          src="images/shutterstock.png"
+          alt="Shutterstock"
+          width="160"
+          height="auto"
+      /></a>
+      </p>
     </section>
-
     <hr>
     <footer id="footer">
       <div class="container">
         <div class="copyright">
           <p>Copyright David Soanes © 2020. All Rights Reserved</p>
-
+          
           <p class="social-desktop">
             <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
             <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
@@ -58,8 +106,6 @@
           <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa" aria-hidden="true"></a>
           <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa" aria-hidden="true"></a>
       </p>
-
-
 </div>
         </div>
       </div>
