--- a/dublin.html
+++ b/dublin.html
@@ -31,22 +31,39 @@
     </div>
 
     <hr>
-
-
     <section>
-      <div class="container">
-        <div class="banner">
-          <img src="./images/homepage-banner.jpg" alt="" />
+      <div class="gallery">
+        <div class="container">
+          <img src="./images/barcelona/barcelona_1.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_2.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_3.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_4.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_5.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_6.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_7.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_8.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_9.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_10.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_11.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_12.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_13.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_14.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_15.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_16.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_17.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_18.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_19.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_20.jpg" alt="" />
+
         </div>
       </div>
     </section>
-
     <hr>
     <footer id="footer">
       <div class="container">
         <div class="copyright">
           <p>Copyright David Soanes © 2020. All Rights Reserved</p>
-
+          
           <p class="social-desktop">
             <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
             <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
@@ -58,8 +75,6 @@
           <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa" aria-hidden="true"></a>
           <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa" aria-hidden="true"></a>
       </p>
-
-
 </div>
         </div>
       </div>
