--- a/about.html
+++ b/about.html
@@ -16,14 +16,14 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="dublin.html">Barcelona</a></li>
-          <li><a href="#">Travel</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Architecture</a></li>
-          <li><a href="#">Landscapes</a></li>
-          <li><a href="#">Reflections</a></li>
-          <li><a href="#">Dereliction</a></li>
-          <li><a href="#">Published</a></li>
+          <li><a href="travel.html">Travel</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="architecture.html">Architecture</a></li>
+          <li><a href="landscapes.html">Landscapes</a></li>
+          <li><a href="reflections.html">Reflections</a></li>
+          <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </header>
@@ -93,7 +93,7 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">
-          <p>Copyright David Soanes © 2020. All Rights Reserved</p>
+          <p>Copyright David Soanes © 2020</p>
           
           <p class="social-desktop">
             <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
