--- a/barcelona.html
+++ b/barcelona.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,26 +36,33 @@
     <section>
       <div class="gallery">
         <div class="container">
+
+          <img src="./images/barcelona/barcelona_3.jpg" alt="" />
+
+          <img src="./images/barcelona/barcelona_12.jpg" alt="" />
+
           <img src="./images/barcelona/barcelona_1.jpg" alt="" />
           <img src="./images/barcelona/barcelona_2.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_3.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_4.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_5.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_6.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_7.jpg" alt="" />
+
+
           <img src="./images/barcelona/barcelona_8.jpg" alt="" />
           <img src="./images/barcelona/barcelona_9.jpg" alt="" />
           <img src="./images/barcelona/barcelona_10.jpg" alt="" />
           <img src="./images/barcelona/barcelona_11.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_12.jpg" alt="" />
           <img src="./images/barcelona/barcelona_13.jpg" alt="" />
           <img src="./images/barcelona/barcelona_14.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_6.jpg" alt="" />
+
           <img src="./images/barcelona/barcelona_15.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_7.jpg" alt="" />
+
           <img src="./images/barcelona/barcelona_16.jpg" alt="" />
           <img src="./images/barcelona/barcelona_17.jpg" alt="" />
           <img src="./images/barcelona/barcelona_18.jpg" alt="" />
-          <img src="./images/barcelona/barcelona_19.jpg" alt="" />
           <img src="./images/barcelona/barcelona_20.jpg" alt="" />
+
+          <img src="./images/barcelona/barcelona_19.jpg" alt="" />
+
         </div>
       </div>
     </section>
