--- a/dereliction.html
+++ b/dereliction.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,31 +36,31 @@
     <section>
       <div class="gallery">
         <div class="container">
+          <img src="./images/dereliction/dereliction-19.jpg" alt="" />
+          <img src="./images/dereliction/dereliction-23.jpg" alt="" />
+
+          <img src="./images/dereliction/dereliction-17.jpg" alt="" />
+          <img src="./images/dereliction/dereliction-15.jpg" alt="" />
+
           <img src="./images/dereliction/dereliction-1.jpg" alt="" />
           <img src="./images/dereliction/dereliction-2.jpg" alt="" />
+          <img src="./images/dereliction/dereliction-14.jpg" alt="" />
+
           <img src="./images/dereliction/dereliction-3.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-4.jpg" alt="" />
           <img src="./images/dereliction/dereliction-5.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-6.jpg" alt="" />
+          <img src="./images/dereliction/dereliction-25.jpg" alt="" />
+
           <img src="./images/dereliction/dereliction-7.jpg" alt="" />
           <img src="./images/dereliction/dereliction-8.jpg" alt="" />
           <img src="./images/dereliction/dereliction-9.jpg" alt="" />
           <img src="./images/dereliction/dereliction-10.jpg" alt="" />
           <img src="./images/dereliction/dereliction-11.jpg" alt="" />
           <img src="./images/dereliction/dereliction-12.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-13.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-14.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-15.jpg" alt="" />
+
           <img src="./images/dereliction/dereliction-16.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-17.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-18.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-19.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-20.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-21.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-22.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-23.jpg" alt="" />
           <img src="./images/dereliction/dereliction-24.jpg" alt="" />
-          <img src="./images/dereliction/dereliction-25.jpg" alt="" />
+          <img src="./images/dereliction/dereliction-13.jpg" alt="" />
+
 
 
         </div>
