--- a/dublin.html
+++ b/dublin.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,7 +36,11 @@
     <section>
       <div class="gallery">
         <div class="container">
+          <img src="./images/dublin/dublin-12.jpg" alt="" />
+
           <img src="./images/dublin/dublin-1.jpg" alt="" />
+          <img src="./images/dublin/dublin-25.jpg" alt="" />
+
           <img src="./images/dublin/dublin-2.jpg" alt="" />
           <img src="./images/dublin/dublin-3.jpg" alt="" />
 
@@ -46,15 +52,12 @@
 
           <img src="./images/dublin/dublin-7.jpg" alt="" />
 
-          <img src="./images/dublin/dublin-8.jpg" alt="" />
-
-          <img src="./images/dublin/dublin-9.jpg" alt="" />
+  
 
           <img src="./images/dublin/dublin-10.jpg" alt="" />
 
           <img src="./images/dublin/dublin-11.jpg" alt="" />
 
-          <img src="./images/dublin/dublin-12.jpg" alt="" />
 
           <img src="./images/dublin/dublin-13.jpg" alt="" />
 
@@ -80,7 +83,6 @@
 
           <img src="./images/dublin/dublin-24.jpg" alt="" />
 
-          <img src="./images/dublin/dublin-25.jpg" alt="" />
 
           <img src="./images/dublin/dublin-26.jpg" alt="" />
 
