--- a/events.html
+++ b/events.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,26 +36,27 @@
     <section>
       <div class="gallery">
         <div class="container">
-          <img src="./images/events/events-1.jpg" alt="" />
-          <img src="./images/events/events-2.jpg" alt="" />
-          <img src="./images/events/events-3.jpg" alt="" />
           <img src="./images/events/events-4.jpg" alt="" />
-          <img src="./images/events/events-5.jpg" alt="" />
-          <img src="./images/events/events-6.jpg" alt="" />
-          <img src="./images/events/events-7.jpg" alt="" />
-          <img src="./images/events/events-8.jpg" alt="" />
-          <img src="./images/events/events-9.jpg" alt="" />
-          <img src="./images/events/events-10.jpg" alt="" />
-          <img src="./images/events/events-11.jpg" alt="" />
-          <img src="./images/events/events-12.jpg" alt="" />
           <img src="./images/events/events-13.jpg" alt="" />
-          <img src="./images/events/events-14.jpg" alt="" />
-          <img src="./images/events/events-15.jpg" alt="" />
-          <img src="./images/events/events-16.jpg" alt="" />
+
+          <img src="./images/events/events-9.jpg" alt="" />
           <img src="./images/events/events-17.jpg" alt="" />
+          <img src="./images/events/events-8.jpg" alt="" />
+
+
+
+
+          <img src="./images/events/events-5.jpg" alt="" />
+          <img src="./images/events/events-7.jpg" alt="" />
+          <img src="./images/events/events-10.jpg" alt="" />
+          <img src="./images/events/events-12.jpg" alt="" />
+          <img src="./images/events/events-14.jpg" alt="" />
           <img src="./images/events/events-18.jpg" alt="" />
-          <img src="./images/events/events-19.jpg" alt="" />
           <img src="./images/events/events-20.jpg" alt="" />
+          <img src="./images/events/events-19.jpg" alt="" />
+          <img src="./images/events/events-11.jpg" alt="" />
+
+
 
         </div>
       </div>
