--- a/landscapes.html
+++ b/landscapes.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,30 +36,24 @@
     <section>
       <div class="gallery">
         <div class="container">
+          <img src="./images/landscapes/landscapes-25.jpg" alt="" />
+
+          <img src="./images/landscapes/landscapes-9.jpg" alt="" />
+
           <img src="./images/landscapes/landscapes-1.jpg" alt="" />
+
           <img src="./images/landscapes/landscapes-2.jpg" alt="" />
           <img src="./images/landscapes/landscapes-3.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-4.jpg" alt="" />
           <img src="./images/landscapes/landscapes-5.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-6.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-7.jpg" alt="" />
           <img src="./images/landscapes/landscapes-8.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-9.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-10.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-11.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-12.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-13.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-14.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-15.jpg" alt="" />
+
           <img src="./images/landscapes/landscapes-16.jpg" alt="" />
           <img src="./images/landscapes/landscapes-18.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-19.jpg" alt="" />
           <img src="./images/landscapes/landscapes-20.jpg" alt="" />
           <img src="./images/landscapes/landscapes-21.jpg" alt="" />
           <img src="./images/landscapes/landscapes-22.jpg" alt="" />
           <img src="./images/landscapes/landscapes-23.jpg" alt="" />
           <img src="./images/landscapes/landscapes-24.jpg" alt="" />
-          <img src="./images/landscapes/landscapes-25.jpg" alt="" />
           <img src="./images/landscapes/landscapes-26.jpg" alt="" />
 
         </div>
