--- a/travel.html
+++ b/travel.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,24 +36,26 @@
     <section>
       <div class="gallery">
         <div class="container">
+          <img src="./images/travel/travel-10.jpg" alt="" />
+          <img src="./images/travel/travel-13.jpg" alt="" />
+          <img src="./images/travel/travel-14.jpg" alt="" />
+
           <img src="./images/travel/travel-1.jpg" alt="" />
           <img src="./images/travel/travel-2.jpg" alt="" />
           <img src="./images/travel/travel-3.jpg" alt="" />
           <img src="./images/travel/travel-4.jpg" alt="" />
           <img src="./images/travel/travel-5.jpg" alt="" />
+          <img src="./images/travel/travel-18.jpg" alt="" />
+
           <img src="./images/travel/travel-6.jpg" alt="" />
           <img src="./images/travel/travel-7.jpg" alt="" />
           <img src="./images/travel/travel-8.jpg" alt="" />
           <img src="./images/travel/travel-9.jpg" alt="" />
-          <img src="./images/travel/travel-10.jpg" alt="" />
           <img src="./images/travel/travel-11.jpg" alt="" />
           <img src="./images/travel/travel-12.jpg" alt="" />
-          <img src="./images/travel/travel-13.jpg" alt="" />
-          <img src="./images/travel/travel-14.jpg" alt="" />
           <img src="./images/travel/travel-15.jpg" alt="" />
           <img src="./images/travel/travel-16.jpg" alt="" />
           <img src="./images/travel/travel-17.jpg" alt="" />
-          <img src="./images/travel/travel-18.jpg" alt="" />
           <img src="./images/travel/travel-19.jpg" alt="" />
           <img src="./images/travel/travel-20.jpg" alt="" />
           <img src="./images/travel/travel-21.jpg" alt="" />
