--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
         </label>
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
-          <li><a href="barcelona.html">Barcelona</a></li>
+         <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -54,9 +56,9 @@
         </p>
 
         <p class="social-mobile">
-          <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa" aria-hidden="true"></a>
-          <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa" aria-hidden="true"></a>
-          <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa" aria-hidden="true"></a>
+          <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+          <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
+          <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
       </p>
 
 
