--- a/products.html
+++ b/products.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,31 +36,27 @@
     <section>
       <div class="gallery">
         <div class="container">
-          <img src="./images/products/products-1.jpg" alt="" />    
-          <img src="./images/products/products-2.jpg" alt="" /> 
+          <img src="./images/products/products-1.jpg" alt="" />  
+          <img src="./images/products/products-9.jpg" alt="" />
+  
+
           <img src="./images/products/products-3.jpg" alt="" />
-          <img src="./images/products/products-4.jpg" alt="" />
           <img src="./images/products/products-5.jpg" alt="" />
           <img src="./images/products/products-6.jpg" alt="" />
           <img src="./images/products/products-7.jpg" alt="" />
-          <img src="./images/products/products-8.jpg" alt="" />
-          <img src="./images/products/products-9.jpg" alt="" />
+          <img src="./images/products/products-2.jpg" alt="" /> 
+
           <img src="./images/products/products-10.jpg" alt="" />
           <img src="./images/products/products-11.jpg" alt="" />
-          <img src="./images/products/products-12.jpg" alt="" />
           <img src="./images/products/products-13.jpg" alt="" />
           <img src="./images/products/products-14.jpg" alt="" />
-          <img src="./images/products/products-15.jpg" alt="" />
           <img src="./images/products/products-16.jpg" alt="" />
-          <img src="./images/products/products-17.jpg" alt="" />
           <img src="./images/products/products-18.jpg" alt="" />
           <img src="./images/products/products-19.jpg" alt="" />
-          <img src="./images/products/products-20.jpg" alt="" />
           <img src="./images/products/products-21.jpg" alt="" />
           <img src="./images/products/products-22.jpg" alt="" />
+
           <img src="./images/products/products-23.jpg" alt="" />
-          <img src="./images/products/products-24.jpg" alt="" />
-          <img src="./images/products/products-25.jpg" alt="" />
 
         </div>
       </div>
