--- a/published.html
+++ b/published.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,32 +36,29 @@
     <section>
       <div class="gallery">
         <div class="container">
+          <img src="./images/published/published-9.jpg" alt="" />
+
           <img src="./images/published/published-1.jpg" alt="" />
-          <img src="./images/published/published-2.jpg" alt="" />
-          <img src="./images/published/published-3.jpg" alt="" />
+          <img src="./images/published/published-8.jpg" alt="" />
+          <img src="./images/published/published-12.jpg" alt="" />
+          <img src="./images/published/published-18.jpg" alt="" />
+          <img src="./images/published/published-24.jpg" alt="" />
+          <img src="./images/published/published-25.jpg" alt="" />
+
+
           <img src="./images/published/published-4.jpg" alt="" />
           <img src="./images/published/published-5.jpg" alt="" />
-          <img src="./images/published/published-6.jpg" alt="" />
           <img src="./images/published/published-7.jpg" alt="" />
-          <img src="./images/published/published-8.jpg" alt="" />
-          <img src="./images/published/published-9.jpg" alt="" />
           <img src="./images/published/published-10.jpg" alt="" />
-          <img src="./images/published/published-11.jpg" alt="" />
-          <img src="./images/published/published-12.jpg" alt="" />
           <img src="./images/published/published-13.jpg" alt="" />
           <img src="./images/published/published-14.jpg" alt="" />
           <img src="./images/published/published-15.jpg" alt="" />
           <img src="./images/published/published-16.jpg" alt="" />
+
           <img src="./images/published/published-17.jpg" alt="" />
-          <img src="./images/published/published-18.jpg" alt="" />
           <img src="./images/published/published-19.jpg" alt="" />
           <img src="./images/published/published-20.jpg" alt="" />
-          <img src="./images/published/published-21.jpg" alt="" />
           <img src="./images/published/published-22.jpg" alt="" />
-          <img src="./images/published/published-23.jpg" alt="" />
-          <img src="./images/published/published-24.jpg" alt="" />
-          <img src="./images/published/published-25.jpg" alt="" />
-          <img src="./images/published/published-26.jpg" alt="" />
           <img src="./images/published/published-27.jpg" alt="" />
 
           
