--- a/wildlife.html
+++ b/wildlife.html
@@ -16,13 +16,15 @@
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
+          <!--<li><a href="dublin.html">Dublin</a></li> -->
           <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html">Events</a></li> 
+         <!-- <li><a href="reflections.html">Reflections</a></li> -->
           <li><a href="products.html">Products</a></li>
           <li><a href="architecture.html">Architecture</a></li>
           <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="reflections.html">Reflections</a></li>
           <li><a href="dereliction.html">Dereliction</a></li>
+          <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -34,20 +36,22 @@
     <section>
       <div class="gallery">
         <div class="container">
+          <img src="./images/wildlife/wildlife-12.jpg" alt="" />
+          <img src="./images/wildlife/wildlife-9.jpg" alt="" />
           <img src="./images/wildlife/wildlife-1.jpg" alt="" />
+          <img src="./images/wildlife/wildlife-7.jpg" alt="" />
+
+          <img src="./images/wildlife/wildlife-14.jpg" alt="" />
+
           <img src="./images/wildlife/wildlife-2.jpg" alt="" />
           <img src="./images/wildlife/wildlife-3.jpg" alt="" />
-          <img src="./images/wildlife/wildlife-4.jpg" alt="" />
           <img src="./images/wildlife/wildlife-5.jpg" alt="" />
           <img src="./images/wildlife/wildlife-6.jpg" alt="" />
-          <img src="./images/wildlife/wildlife-7.jpg" alt="" />
           <img src="./images/wildlife/wildlife-8.jpg" alt="" />
-          <img src="./images/wildlife/wildlife-9.jpg" alt="" />
           <img src="./images/wildlife/wildlife-10.jpg" alt="" />
-          <img src="./images/wildlife/wildlife-11.jpg" alt="" />
-          <img src="./images/wildlife/wildlife-12.jpg" alt="" />
           <img src="./images/wildlife/wildlife-13.jpg" alt="" />
-          <img src="./images/wildlife/wildlife-14.jpg" alt="" />
+          <img src="./images/wildlife/wildlife-11.jpg" alt="" />
+
 
         </div>
       </div>
