--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <title>David Soanes Photography</title>
-    <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
+    <script src="https://use.fontawesome.com/af14fb55aa.js"></script>    <script src="js/javascript.js"></script>
 </head>
   <body>
       <header class="header">
