--- a/barcelona.html
+++ b/barcelona.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>David Soanes Photography</title>
     <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
+    <script src="js/javascript.js"></script>
+
 </head>
   <body>
       <header class="header">
