--- a/food.html
+++ b/food.html
@@ -7,6 +7,8 @@
     <title>David Soanes Photography</title>
     <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
     <script src="js/javascript.js"></script>
+    <link rel="icon" type="image/png" href="images/favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.ico">
 
 </head>
   <body>
