--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>David Soanes Photography</title>
     <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
     <script src="js/javascript.js"></script>
-
+    <link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
   <body>
       <header class="header">
@@ -62,6 +62,11 @@
           <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
           <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
       </p>
+
+      <script>
+
+        </script>
+
 
 
 </div>
