--- a/about.html
+++ b/about.html
@@ -41,21 +41,19 @@
       <h1>About</h1>
       <p>Welcome to David Soanes Photography.</p>
       <p>
-        I am based in Dublin, where currently I work on commission and shoot
+        I am based in Barcelona, Spain where currently I work on commission and shoot
         stock photography for Getty Images and other stock photography agencies.
       </p>
       <p>I specialise in the following areas:</p>
+
       <ul>
         <li>Travel photography</li>
       </ul>
       <ul>
-        <li>Events</li>
+        <li>Stock photography</li>
       </ul>
       <ul>
         <li>Product Photography</li>
-      </ul>
-      <ul>
-        <li>Food Photography</li>
       </ul>
       <p>
         I am also available for specific client requests, just contact me by
@@ -66,12 +64,12 @@
         >
         for more information.
       </p>
-      <p>
+     <!--<p>
         Previous Clients include: Open House Dublin, St. Patrick&#8217;s
         Festival, Fáilte Ireland, Dublin Dance Festival, Arthritis Ireland,
         Camara Education, An Taisce &#8211; The National Trust for Ireland,
         Brambles Café, Empire Donuts, Dubliner Magazine, The Gathering Ireland.
-      </p>
+      </p>-->
       <p>
         <a
           href="https://www.gettyimages.co.uk/photos/david-soanes?family=creative&license=rf&phrase=david%20soanes&sort=best"
