--- a/architecture.html
+++ b/architecture.html
@@ -48,6 +48,7 @@
           <img src="./images/architecture/architecture-7.jpg" alt="" />
           <img src="./images/architecture/architecture-8.jpg" alt="" />
           <img src="./images/architecture/architecture-3.jpg" alt="" />
+          <img src="./images/architecture/architecture-18.jpg" alt="" />
 
           <img src="./images/architecture/architecture-13.jpg" alt="" />
           <img src="./images/architecture/architecture-14.jpg" alt="" />
