--- a/reflections.html
+++ b/reflections.html
@@ -49,6 +49,8 @@
           <img src="./images/reflections/reflections-8.jpg" alt="" />
           <img src="./images/reflections/reflections-9.jpg" alt="" />
           <img src="./images/reflections/reflections-10.jpg" alt="" />
+          <img src="./images/barcelona/barcelona_16.jpg" alt="" />
+
 
         </div>
       </div>
