--- a/architecture.html
+++ b/architecture.html
@@ -44,6 +44,7 @@
           <img src="./images/architecture/architecture-4.jpg" alt="" />
 
           <img src="./images/architecture/architecture-5.jpg" alt="" />
+          <img src="./images/architecture/architecture-19.jpg" alt="" />
 
           <img src="./images/architecture/architecture-7.jpg" alt="" />
           <img src="./images/architecture/architecture-8.jpg" alt="" />
@@ -52,7 +53,11 @@
 
           <img src="./images/architecture/architecture-13.jpg" alt="" />
           <img src="./images/architecture/architecture-14.jpg" alt="" />
+          <img src="./images/architecture/architecture-20.jpg" alt="" />
+
           <img src="./images/architecture/architecture-15.jpg" alt="" />
+
+
 
         </div>
       </div>
