--- a/reflections.html
+++ b/reflections.html
@@ -50,6 +50,8 @@
           <img src="./images/reflections/reflections-9.jpg" alt="" />
           <img src="./images/reflections/reflections-10.jpg" alt="" />
           <img src="./images/barcelona/barcelona_16.jpg" alt="" />
+          <img src="./images/reflections/reflections-11.jpg" alt="" />
+
 
 
         </div>
