--- a/wildlife.html
+++ b/wildlife.html
@@ -55,6 +55,8 @@
           <img src="./images/wildlife/wildlife-8.jpg" alt="" />
           <img src="./images/wildlife/wildlife-13.jpg" alt="" />
           <img src="./images/wildlife/wildlife-11.jpg" alt="" />
+          <img src="./images/wildlife/wildlife-17.jpg" alt="" />
+
 
 
 
