--- a/landscapes.html
+++ b/landscapes.html
@@ -55,7 +55,7 @@ function topFunction() {
         <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
         <ul  class="menu">    
           <li><a href="barcelona.html">Barcelona</a></li>
-          <!--<li><a href="dublin.html">Dublin</a></li> -->
+          <li><a href="dublin.html">Dublin</a></li> 
           <li><a href="travel.html">Travel</a></li>
           <li><a href="events.html">Events</a></li> 
          <!-- <li><a href="reflections.html">Reflections</a></li> -->
