--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
         document.documentElement.scrollTop = 0;
       }
       </script>
+<div class = "container">
+
       <header class="header">
+
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn">
           <span class="navicon"></span>
         </label>
-        <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
+       <a href="index.html" class="logo"><img src="./images/logo.png"></a>
         <ul  class="menu">    
          <li><a href="barcelona.html">Barcelona</a></li>
           <li><a href="dublin.html">Dublin</a></li> 
@@ -63,9 +66,7 @@
           <li><a href="about.html">About</a></li>
         </ul>
       </header>
-
     </div>
-
     <hr>
 
 
@@ -81,7 +82,7 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">
-          <p>Copyright David Soanes © 2020</p>
+          <p class="copyright-text">© David Soanes 2020</p>
 
           <p class="social-desktop">
             <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
@@ -95,9 +96,7 @@
           <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
       </p>
 
-      <script>
 
-        </script>
 
 
 
