--- a/products.html
+++ b/products.html
@@ -101,8 +101,8 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">
-          <p>Copyright David Soanes © 2020</p>
-          
+          <p class="copyright-text">© David Soanes 2020</p>
+
           <p class="social-desktop">
             <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
             <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
@@ -110,10 +110,15 @@
         </p>
 
         <p class="social-mobile">
-          <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa" aria-hidden="true"></a>
-          <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa" aria-hidden="true"></a>
-          <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa" aria-hidden="true"></a>
+          <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
+          <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
+          <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
       </p>
+
+
+
+
+
 </div>
         </div>
       </div>
