--- a/events.html
+++ b/events.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Events - David Soanes Photography</title>
     <meta name="description" content="Events photography gallery." />
+    <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
 
     <script src="js/javascript.js"></script>
     <link rel="icon" type="image/png" href="images/favicon.ico">
@@ -41,7 +42,7 @@
         document.body.scrollTop = 0;
         document.documentElement.scrollTop = 0;
       }
-      </script>    <header class="header">
+      </script>  <header class="header">
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn">
           <span class="navicon"></span>
