--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>David Soanes Photography</title>
     <meta name="description" content="Photographer based in Barcelona and specialising in stock, product and travel photography." />
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
     <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
     <script src="js/javascript.js"></script>
     <link rel="icon" type="image/png" href="images/favicon.ico">
@@ -43,6 +45,7 @@
           <li><a href="wildlife.html">Wildlife</a></li>
           <li><a href="published.html">Published</a></li>
           <li><a href="about.html">About</a></li>
+
         </ul>
       </header>
     </div>
